@@ -3827,3 +3827,4 @@ Start... early ages
 - desk/deskapp.c: Validate icon number when reading EMUDESK.INF. (RFB)
 - bios/amiga.c bios/amiga.h bios/bios.c bios/kprint.c include/config.h:
   Added kprintf() support for UAE. (VRI)
+- bios/amiga.c bios/amiga.h bios/bios.c: Added shutdown support for UAE. (VRI)
